Lab1/terraform/modules/network/main.tf
  resource "aws_vpc" "main" {
    cidr_block           = var.vpc_cidr
    enable_dns_hostnames = true
    tags                 = { Name = "Lab-VPC" }
  }

  resource "aws_subnet" "public" {
    vpc_id                  = aws_vpc.main.id
    cidr_block              = var.public_subnet_cidr
    map_public_ip_on_launch = true
    tags                    = { Name = "Public-Subnet" }
  }

  resource "aws_subnet" "private" {
    vpc_id     = aws_vpc.main.id
    cidr_block = var.private_subnet_cidr
    tags       = { Name = "Private-Subnet" }
  }

  resource "aws_internet_gateway" "igw" { vpc_id = aws_vpc.main.id }

  resource "aws_eip" "nat_eip" { domain = "vpc" }

  resource "aws_nat_gateway" "nat" {
    allocation_id = aws_eip.nat_eip.id
    subnet_id     = aws_subnet.public.id
  }

  resource "aws_route_table" "public" {
    vpc_id = aws_vpc.main.id
    route {
      cidr_block = "0.0.0.0/0"
      gateway_id = aws_internet_gateway.igw.id
    }
  }

  resource "aws_route_table_association" "public" {
    subnet_id      = aws_subnet.public.id
    route_table_id = aws_route_table.public.id
  }

  resource "aws_route_table" "private" {
    vpc_id = aws_vpc.main.id
    route {
      cidr_block     = "0.0.0.0/0"
      nat_gateway_id = aws_nat_gateway.nat.id
    }
  }

  resource "aws_route_table_association" "private" {
    subnet_id      = aws_subnet.private.id
    route_table_id = aws_route_table.private.id
  }
